# skill-project

./: README.md  main.py  pyproject.toml
config/: dev.toml  local.toml  prod.toml  test.toml
data/releases/: change-log.md
data/support/: refund-policy.md
data/travel/: destination-guide.md  shopping-guide.md
generated_skills/active/sales_sql_playbook/: SKILL.md
generated_skills/approved/: skill_099d4cdc6a0a.json
generated_skills/candidates/: skill_099d4cdc6a0a.json
generated_skills/evolution/skills/: evo_skill_16286ffbdb1e.json  evo_skill_a3f2a213ec2a.json  (+1 more)
generated_skills/reports/: report_542bebe0da48.json  report_61a0a1502a5c.json
skill_project/: __init__.py  __main__.py  evolution_skill_loader.py
skill_project/api/: deep_agent_api.py  evolution_skill_api.py  langgraph_api.py  lifespan.py  main.py  schemas.py  skill_evolution_api.py
skill_project/core/: config.py
skill_project/evolution-skill/: README.md  service.py
skill_project/langgraph_skill/: README.md  __init__.py  agent.py  graph.py  middleware.py  models.py  nodes.py  registry.py  service.py  state.py  tools.py
skill_project/llm/: __init__.py  openai_client.py
skill_project/services/: skill_service.py
skill_project/skill_evolution/: README.md  __init__.py  bridge.py  evaluator.py  generator.py  models.py  service.py  storage.py
skills/release-notes/: SKILL.md  template.md
skills/skill-creator/: SKILL.md
skills/support-triage/: SKILL.md  response-template.md
skills/travel-itinerary/: SKILL.md  template.md
skills/travel-shopping/: SKILL.md  recommendation-template.md
(+2 files in other folders)
